fix: scaffolding display on mobile to block

--- a/site/_scss/layouts/devsite-theme.scss
+++ b/site/_scss/layouts/devsite-theme.scss
@@ -727,7 +727,7 @@ search-box {
 }
 
 
-@media (max-width: 591px) {
+@media (max-width: 991px) {
   .scaffold{
     display:block;
   }
